# exploring_cors_yew

./: Cargo.toml  index.html
src/: main.rs
