[package]
name = "exploring_cors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
serde = { version = "1.0.159", features = ["derive"] }
wasm-bindgen-futures = "0.4.34"
yew = { version = "0.20.0", features = ["csr"] }
yew-hooks = "0.2.0"
